Fixed ScrollBAr bug

--- a/activities/TamTamMicro.activity/css/activity.css
+++ b/activities/TamTamMicro.activity/css/activity.css
@@ -1,3 +1,7 @@
+body{
+	overflow: hidden;
+}
+
 #main-toolbar #activity-button {
   background-image: url(../activity/activity-icon.svg);
 }
